Add DTrace-style oneliner language for quick debugging